--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="#" />
     <title>Django REST with React</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <!-- React will load here -->
+      <!-- React will load here -->
     </div>
-</body>
-{% load static %}
-<script src="{% static 'frontend/main.js' %}"></script>
-
+  </body>
+  {% load static %}
+  <script
+    type="text/javascript"
+    src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=znaixfs0cd&submodules=geocoder"
+  ></script>
+  <script src="{% static 'frontend/main.js' %}"></script>
 </html>
