--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .popup_container {
   display: flex;
   width: 100%;
@@ -35,4 +30,9 @@ body {
 
 .popup_container .upper_bar {
   display: flex;
+}
+
+.iw_inner {
+  padding-left: 5px;
+  padding-right: 5px;
 }
