--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -23,6 +23,87 @@
   display: flex;
 }
 
+.contents {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 80px 80px 80px 80px;
+  width: 100%;
+}
+
+.store {
+  display: block;
+  position: relative;
+  width: 45%;
+  height: 380px;
+  margin: 20px;
+  overflow: hidden;
+}
+
+@media all and (max-width: 1280px) {
+  .store {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 380px;
+    margin: 20px;
+    overflow: hidden;
+  }
+}
+
+.lineup {
+  display: table;
+  width: 100%;
+  height: 380px;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+}
+.lineup_item_name {
+  display: table-cell;
+  width: 33%;
+  padding: 284px 0px 0px 22px;
+  transition: padding 0.5s;
+}
+.store_blank {
+  position: absolute;
+  display: block;
+  background: #bcbcbc;
+  width: 100%;
+  height: 241px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 25px 8px 0px 8px;
+  transition: height 0.5s;
+}
+
+.store:hover .store_blank {
+  height: 124px;
+}
+
+.store:hover .signature,
+.store:hover .may2021,
+.store:hover .kakao {
+  padding: 167px 0px 0px 22px;
+}
+
+.store_name {
+  font-size: 48px;
+  font-weight: 900;
+}
+
+.store_ad {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+@media all and (max-width: 668px) {
+  .contents {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px;
+    width: 100%;
+  }
+}
+
 #map {
   width: 100%;
   height: 400px;
