--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -32,7 +32,12 @@
   display: flex;
 }
 
-.iw_inner {
+#map .iw_inner {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.popup_container #map {
+  width: 100%;
+  height: 400px;
 }
