--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -32,9 +32,28 @@
   display: flex;
 }
 
-#map .iw_inner {
+.iw_inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 200px;
+}
+.iw_inner .iw_content {
+  background-color: #fff;
+  border-radius: 7px;
+  border: solid 0.5px black;
   padding-left: 5px;
   padding-right: 5px;
+}
+.iw_inner .address_title {
+  font-size: 20px;
+}
+
+.iw_inner .address_point {
+  width: 3px;
+  height: 10px;
+  background-color: black;
 }
 
 .popup_container #map {
