--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -57,11 +57,38 @@ p {
   margin-left: 178px;
 }
 
+/* 여기부분만 추가했습니다. map function 안에 있는 className입니다 */
+
+.ricewine_product_container {
+  float: left;
+}
+
+.ricewine_product {
+  display: flex;
+  flex-direction: row;
+  height: 150px;
+}
+
+.ricewine_img {
+  min-width: 90px;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.ricewine_name {
+  font-size: 18px;
+}
+.ricewine_description {
+  font-size: 13px;
+}
+
+/* ricewine 수정부분은 여기까지입니다 */
+
 .products_more {
   float: left;
   display: block;
-  width: 10%;
-  margin-left: 70px;
 }
 
 .products_description {
