--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -11,7 +11,7 @@
 }
 
 .popup_container .content {
-  font-family: "Noto Sans CJK KR", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-size: 13px;
   width: 100%;
   margin-right: 3vw;
@@ -19,10 +19,10 @@
   max-width: 600px;
   min-width: 220px;
   padding: 10px 20px;
-  background: #fff;
+  background: #DEDDDD;
   border-radius: 5px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  font-weight: 500;
+  font-weight: 700;
   color: #333333;
   display: flex;
   flex-direction: column;
@@ -30,6 +30,7 @@
 
 .popup_container .upper_bar {
   display: flex;
+  place-content: space-between;
 }
 
 .iw_inner {
