--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -1,3 +1,16 @@
+.store_short_location {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 3;
+  width: 90px;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefef;
+}
+
 .store_container {
   width: 200px;
   height: 100px;
@@ -7,12 +20,12 @@
   background-color: rgb(173, 173, 173);
 }
 #store_paragraph {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
-    margin-top: 125px;
-    margin-bottom: 60px;
-	width: 351px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  margin-top: 125px;
+  margin-bottom: 60px;
+  width: 351px;
 }
 .item_image {
   height: 150px;
@@ -36,7 +49,7 @@
   width: 100%;
 }
 
-.store_list{
+.store_list {
   display: flex;
   flex-wrap: wrap;
 }
@@ -52,12 +65,10 @@
 
 @media all and (max-width: 1280px) {
   .store {
-    display: block;
     position: relative;
     width: 100%;
     height: 380px;
     margin: 20px;
-    overflow: hidden;
   }
 }
 
