--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -19,7 +19,7 @@
   max-width: 600px;
   min-width: 220px;
   padding: 10px 20px;
-  background: #DEDDDD;
+  background: #bcbcbc;
   border-radius: 5px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   font-weight: 700;
@@ -48,7 +48,7 @@
   padding-right: 5px;
 }
 .iw_inner .address_title {
-  font-size: 20px;
+  font-size: 18 px;
 }
 
 .iw_inner .address_point {
@@ -61,3 +61,5 @@
   width: 100%;
   height: 400px;
 }
+
+.
