--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -1,7 +1,7 @@
 .store_short_location {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: -20px;
+  top: -20px;
   z-index: 3;
   width: 90px;
   height: 90px;
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-color: #efefef;
+  border: 1px solid black;
 }
 
 .store_container {
@@ -20,9 +21,8 @@
   background-color: rgb(173, 173, 173);
 }
 #store_paragraph {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
   margin-top: 125px;
   margin-bottom: 20px;
   width: 351px;
@@ -55,21 +55,21 @@
 }
 
 .store {
-  display: block;
   position: relative;
   width: 45%;
-  height: 380px;
   margin: 20px;
-  overflow: hidden;
 }
 
 @media all and (max-width: 1280px) {
   .store {
-    position: relative;
     width: 100%;
-    height: 380px;
-    margin: 20px;
   }
+}
+
+.store_more{
+    overflow: hidden;
+    position: relative;
+    height: auto;
 }
 
 .lineup {
@@ -91,7 +91,6 @@
 }
 .store_blank {
   position: absolute;
-  display: block;
   background: #bcbcbc;
   width: 100%;
   height: 241px;
@@ -124,10 +123,9 @@
   .contents {
     margin: 0px;
   }
-
-  .store {
+  .store_more{
     height: 247px;
-  }
+}
 
   .store_blank {
     height: 171px;
@@ -136,5 +134,9 @@
   #store_paragraph {
     margin-top: 0px;
     margin-left: 60px;
+  }
+
+  .store_short_location {
+    right: 0px;
   }
 }
