--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -1,29 +1,30 @@
 .contact{
-	display: block;
 	margin: 80px 80px 80px 80px;
 	width: 100%;
 }
 
 #contact_title{
-	display: inline;
+	margin-bottom: 125px
 }
 
-.contact_icons{
-	display: inline;
+.contact_after_t{
+	display: flex;
+}
+
+.contact_more{
+	width: 385px;
 }
 
 .contact img{
-	float: right;
+	float: left;
 	margin: 0px 5px;
 	width: 35px;
-	height: auto;
 	opacity: 0.3;
 }
 
 .contact_text{
 	font-weight: 700;
 	font-size: 24px;
-	margin-top: 125px;
 }
 
 .contact_text2{
@@ -32,40 +33,30 @@
 }
 
 .map{
-	display: block;
-	background-color: white;
-	width: 1017px;
-	height: 500px;
-	float: right;
-	box-shadow: inset 5px 5px 4px rgba(0, 0, 0, 0.25);
+	width: 53vw;
+	height: 776px;
+	box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
 }
 
-@media all and (max-width: 1375px){
+@media all and (max-width: 1460px){
 	.map{
-		display: block;
-		background-color: white;
 		width: 100%;
 		height: 500px;
-		float: left;
-		box-shadow: inset 5px 5px 4px rgba(0, 0, 0, 0.25);
+		margin: 0px 20px;
 	}
 }
 
 @media all and (max-width:668px) {
 	.contact{
-		display: block;
 		margin: 0px;
-		width: 100%;
 	}
 
 	#contact_title{
-		display: block;
-		margin: 42px 0px 0px 0px;
+		margin: 42px 0px;
 	}
 
 	.contact_icons{
-		text-align: right;
-		float: right;
+		margin: 0% 10%;
 	}
 
 	.contact img{
@@ -74,23 +65,11 @@
 	}
 
 	.contact_text{
-		font-weight: 700;
-		font-size: 30px;
+		font-size: 22px;
 		margin-left: 10%;
 	}
 
 	.contact_text2{
-		font-weight: 400;
-		font-size: 24px;
 		margin-left: 10%;
-	}
-
-	.map{
-		display: block;
-		background-color: white;
-		width: 80%;
-		height: 400px;
-		margin: 0% 10%;
-		box-shadow: inset 5px 5px 4px rgba(0, 0, 0, 0.25);
 	}
 }
