edited general mobile environment

--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -135,13 +135,13 @@ p {
   }
   .title {
     font-size: 36px;
-    margin: 42px 0px;
+    margin: 0px;
     text-align: center;
     width: 100%;
   }
   .title2 {
     font-size: 36px;
-    margin: 42px 0px;
+    margin: 0px;
     text-align: center;
   }
 
