--- a/frontend/src/components/Navigation/Navigation_mobile.css
+++ b/frontend/src/components/Navigation/Navigation_mobile.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  font-size: 30px;
 }
 .mobile_menu_opened_container {
   width: 100%;
@@ -13,14 +14,19 @@
 }
 
 .mobile_menu_all {
-  right: 0;
+  top: 34px;
+  right: 30px;
   position: absolute;
-  width: 80px;
-  height: 150px;
+  width: 243px;
+  height: 427px;
   display: flex;
   flex-direction: column;
-  background-color: cadetblue;
+  background-color: #D6D5D5;
   z-index: 4;
+  text-align: right;
+  border-radius: 36px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.25);
+  padding: 10px;
 }
 
 .mobile_menu_opened {
@@ -33,4 +39,8 @@
   width: 100%;
   height: 100%;
   opacity: 50%;
+}
+
+.mobile_nav_button{
+  margin: 34px 30px 0px 0px;
 }
