--- a/frontend/src/components/Navigation/Navigation_mobile.css
+++ b/frontend/src/components/Navigation/Navigation_mobile.css
@@ -1,12 +1,12 @@
 .mobile_nav {
   position: absolute;
-  width: 100%;
-  height: 100%;
   z-index: 5;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   font-size: 30px;
+  width: 100%;
+  height: 100%;
 }
 .mobile_menu_opened_container {
   width: 100%;
@@ -21,11 +21,11 @@
   height: 427px;
   display: flex;
   flex-direction: column;
-  background-color: #D6D5D5;
+  background-color: #d6d5d5;
   z-index: 4;
   text-align: right;
   border-radius: 36px;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.25);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   padding: 10px;
 }
 
@@ -41,6 +41,8 @@
   opacity: 50%;
 }
 
-.mobile_nav_button{
+.mobile_nav_button {
   margin: 34px 30px 0px 0px;
+  width: 82px;
+  height: 82px;
 }
