--- a/frontend/src/components/Navigation/Navigation_mobile.css
+++ b/frontend/src/components/Navigation/Navigation_mobile.css
@@ -1,12 +1,13 @@
 .mobile_nav {
   position: absolute;
-  z-index: 5;
+  z-index: 6;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   font-size: 30px;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 .mobile_menu_opened_container {
   width: 100%;
@@ -39,10 +40,12 @@
   width: 100%;
   height: 100%;
   opacity: 50%;
+  pointer-events: auto;
 }
 
 .mobile_nav_button {
   margin: 34px 30px 0px 0px;
   width: 82px;
   height: 82px;
+  pointer-events: auto;
 }
