--- a/frontend/src/components/Stores/StoreType.css
+++ b/frontend/src/components/Stores/StoreType.css
@@ -1,12 +1,22 @@
 .shop_or_pub_container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
+  border-left-width: 0.5px; 
 }
 
 .shop_or_pub {
   width: 80px;
+  height: 27px;
   text-align: center;
+  border-right: solid;
+  border-top: solid;
+  border-bottom: solid;
+  border-right-width: 0.5px;
+  border-top-width: 0.5px;
+  border-bottom-width: 0.5px;
+  font-size: 16px;
+  font-weight: 500;
   cursor: pointer;
-  background-color: azure;
+  background-color: rgb(247, 247, 247);
 }
