Change posiion store_paragraph @media to flex-start, Give margin top

--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -136,8 +136,8 @@
   }
 
   #store_paragraph {
-    margin-top: 0px;
-    margin-left: 60px;
+    margin-top: 25px;
+    justify-content: flex-start;
   }
 
   .store_short_location {
