Add index_copy for heroku deploy

--- a/frontend/templates/frontend/index_copy.html
+++ b/frontend/templates/frontend/index_copy.html
@@ -17,5 +17,5 @@
     type="text/javascript"
     src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=znaixfs0cd&submodules=geocoder"
   ></script>
-  <script src="{% static 'frontend/main.js' %}"></script>
+  <script src="{% static 'frontend/main_copy.js' %}"></script>
 </html>
