--- a/frontend/src/components/Navigation/Navigation_mobile.css
+++ b/frontend/src/components/Navigation/Navigation_mobile.css
@@ -49,7 +49,11 @@
 
 .mobile_nav_button {
   margin: 34px 30px 0px 0px;
-  width: 82px;
-  height: 82px;
+  width: 61px;
+  height: 61px;
   pointer-events: auto;
+}
+
+.mobile_nav_button .img{
+  width: 100%;
 }
