--- a/frontend/src/components/Stores/StoreType.css
+++ b/frontend/src/components/Stores/StoreType.css
@@ -28,3 +28,9 @@
   font-weight: 600;
   background-color: #fff;
 }
+
+@media all and (max-width: 668px) {
+	.shop_or_pub_container {
+	  margin-left: 9.5vw;
+	}
+}
