--- a/frontend/src/components/Navigation/Navigation_mobile.css
+++ b/frontend/src/components/Navigation/Navigation_mobile.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  font-size: 30px;
+  font-size: 24px;
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -22,8 +22,8 @@
   top: 34px;
   right: 30px;
   position: absolute;
-  width: 243px;
-  height: 427px;
+  width: 153px;
+  height: 307px;
   display: flex;
   flex-direction: column;
   background-color: #d6d5d5;
@@ -31,7 +31,7 @@
   text-align: right;
   border-radius: 36px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-  padding: 10px;
+  padding: 20px;
 }
 
 .mobile_menu_opened {
@@ -54,6 +54,6 @@
   pointer-events: auto;
 }
 
-.mobile_nav_button .img{
+.mobile_nav_button img{
   width: 100%;
 }
