--- a/frontend/src/components/Stores/Map.css
+++ b/frontend/src/components/Stores/Map.css
@@ -16,8 +16,8 @@
 .popup_container .content {
   font-size: 16px;
   width: 100%;
-  margin-right: 3vw;
-  margin-left: 3vw;
+  margin-right: 7vw;
+  margin-left: 7vw;
   max-width: 600px;
   min-width: 220px;
   padding: 10px 20px 20px 20px;
@@ -56,6 +56,9 @@
 .below_content .copy_address {
   cursor: pointer;
   text-decoration: underline;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
   opacity: 0.5;
 }
 .iw_inner {
