--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -37,10 +37,10 @@ p {
   float: left;
   width: 266px;
   font-weight: 700;
-  font-size: 30px;
-  line-height: 49px;
+  font-size: 23px;
+  line-height: 40px;
   margin-left: 23px;
-  margin-top: 10px;
+  margin-top: 12px;
 }
 
 .products {
@@ -95,7 +95,17 @@ p {
   margin: 60px 0px;
 }
 
-.brewery img {
+.brewery1 img {
+  width: 60vw;
+  margin-top: 20px;
+  margin-left: 9.5vw;
+}
+.brewery2 img {
+  width: 60vw;
+  margin-top: 20px;
+  margin-left: 9.5vw;
+}
+.brewery3 img {
   width: 60vw;
   margin-top: 20px;
   margin-left: 9.5vw;
@@ -124,7 +134,15 @@ p {
       min-width: 13.5vw;
     }
 
-    .brewery img {
+    .brewery1 img {
+      margin-left: 0vw;
+    }
+
+    .brewery2 img {
+      margin-left: 0vw;
+    }
+
+    .brewery3 img {
       margin-left: 0vw;
     }
 }
@@ -169,8 +187,19 @@ p {
     float: right;
   }
 
-  .brewery img {
+  .brewery1 img {
     width: 80%;
     margin: 0% 10%;
   }
+
+  .brewery2 img {
+    width: 80%;
+    margin: 0% 10%;
+  }
+
+  .brewery3 img {
+    width: 80%;
+    margin: 0% 10%;
+  }
+
 }
