--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -59,13 +59,14 @@ p {
 /* 여기부분만 추가했습니다. map function 안에 있는 className입니다 */
 
 .ricewine_product_container {
-  width: 53vw;
   margin-left: 9.5vw;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .ricewine_product {
   display: flex;
-  margin: 25px 0px;
+  margin: 25px 25px 25px 0px;
 }
 
 .ricewine_name {
@@ -74,15 +75,15 @@ p {
   line-height: 30px;
 }
 .ricewine_description {
-  width: 276px;
+  width: 196px;
   font-size: 16px;
   line-height: 27px;
 }
 
 .ricewine_img {
   display: block;
-  min-width: 37.5vw;
-  height: 190px;
+  min-width: 120px;
+  height: 340px;
   margin-right: 25px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -116,7 +117,7 @@ p {
     }
 
     .ricewine_description {
-      width: auto;
+      width: 130px;
     }
 
     .ricewine_img {
@@ -156,8 +157,12 @@ p {
       width: 78vw;
   }
 
+  .ricewine_description {
+      width: auto;
+   }
+
   .ricewine_img {
-      min-width: 37.5vw;
+      min-width: 20.5vw;
   }
 
   .paragraph {
