--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,20 +1,45 @@
 .footer_container {
   bottom: 0px;
-  height: 300px;
-  margin-top: 100px;
+  height: 280px;
+  margin-top: 200px;
   display: flex;
   flex-direction: row;
+  font-size: 14px;
 }
 
 .footer_invisible {
   width: 189px;
-  height: 2px;
-  padding-left: 80px;
 }
-.footer_visible hr {
-  width: calc(100%-269px);
+.footer_visible {
+  width: calc(100% - 189px);
+}
+
+.footer_content {
+  margin: 0px 80px;
 }
 .footer_visible {
   display: flex;
   flex-direction: column;
+}
+
+.footer_information {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_information .left_information {
+  padding-right: 5vw;
+}
+
+@media all and (max-width: 668px) {
+  .footer_container {
+    flex-direction: column;
+    font-size: 13px;
+  }
+  .footer_visible {
+    width: 100%;
+  }
+  .footer_content {
+    margin: 0 20px;
+  }
 }
