fixed mobile margin issues

--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -58,10 +58,12 @@
 	.contact_more{
 	display: flex;
 	margin: 0% 10%;
+	width: auto;
 	}
 
 	.contact_texts{
 		display: block;
+		width: 100%;
 	}
 
 
