--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -96,7 +96,7 @@
   width: 100%;
   height: 201px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 25px 8px 0px 8px;
+  padding: 25px 0px 0px 0px;
   transition: height 0.5s;
 }
 
@@ -111,13 +111,13 @@
 .store_name {
   font-size: 28px;
   font-weight: 700;
-  margin-left: 20px;
+  margin: 0px 20px;
 }
 
 .store_ad {
   font-size: 18px;
   font-weight: 700;
-  margin-left: 20px;
+  margin: 0px 20px;
 }
 
 @media all and (max-width: 668px) {
@@ -131,19 +131,19 @@
   }
 
   .lineup_item {
-  padding: 174px 0px 0px 22px;
-}
+      padding: 174px 0px 0px 22px;
+  }
 
   .store_blank {
     height: 131px;
   }
 
   .store:hover .store_blank {
-  height: 104px;
+    height: 104px;
   }
 
   .store:hover .lineup_item {
-  padding: 147px 0px 0px 22px;
+    padding: 147px 0px 0px 22px;
   }
 
   #store_paragraph {
@@ -155,4 +155,14 @@
   .store_short_location {
     right: 0px;
   }
+}
+
+@media all and (max-width: 400px) {
+    .store_name {
+      font-size: 20px;
+    }
+
+    .store_ad {
+      font-size: 14px;
+    }
 }
