--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -82,6 +82,7 @@
   color: white;
   font-size: 16px;
   font-weight: 550;
+  margin-bottom: 25px;
 }
 .lineup_item {
   display: table-cell;
@@ -96,14 +97,14 @@
   position: absolute;
   background: #bcbcbc;
   width: 100%;
-  height: 201px;
+  height: 180px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 25px 0px 0px 0px;
   transition: height 0.5s;
 }
 
 .store:hover .store_blank {
-  height: 124px;
+  height: 107px;
 }
 
 .store:hover .lineup_item {
