--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -126,6 +126,7 @@
 @media all and (max-width: 668px) {
   #store_title {
     margin-left: 20px;
+    margin-bottom: 0px;
   }
   .contents {
     margin: 20px;
@@ -158,7 +159,7 @@
   }
 
   #store_paragraph {
-    margin: 70px 0px 0px 0px;
+    margin: 70px 0px 20px 20px;
     justify-content: flex-start;
     width: auto;
   }
