--- a/frontend/templates/frontend/index_copy.html
+++ b/frontend/templates/frontend/index_copy.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="#" />
     <title>씨(C)막걸리</title>
+    <meta
+      name="google-site-verification"
+      content="lR_irFzwrrH0zFSJPSfYV1kbTrWNY0DQgsMi2ycNHlU"
+    />
+    <meta name="title" property="og:title" content="씨(C)막걸리" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Creative, Colourful, Cosmopolitan, Contemporary, Classical Craft Makgeolli"
+    />
+    <meta name="url" property="og:url" content="http://www.cmakgeolli.com" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://cmakgeoli.herokuapp.com/static/frontend/public/icons/meta.png"
+    />
+    <link
+      rel="icon"
+      href="https://cmakgeoli.herokuapp.com/static/frontend/public/icons/icon.png"
+    />
   </head>
 
   <body>
