--- a/frontend/templates/frontend/index_copy.html
+++ b/frontend/templates/frontend/index_copy.html
@@ -9,6 +9,10 @@
       name="google-site-verification"
       content="lR_irFzwrrH0zFSJPSfYV1kbTrWNY0DQgsMi2ycNHlU"
     />
+    <meta
+      name="naver-site-verification"
+      content="62e39aae873382400fa988243af63fddf79034cb"
+    />
     <meta name="title" property="og:title" content="씨(C)막걸리" />
     <meta
       name="description"
