--- a/frontend/src/components/Stores/Stores.css
+++ b/frontend/src/components/Stores/Stores.css
@@ -159,9 +159,8 @@
   }
 
   #store_paragraph {
-    margin: 70px 0px 20px 20px;
-    justify-content: flex-start;
-    width: auto;
+    margin: 30px 0px 0px 0px;
+    max-width: none;
   }
 
   .store_short_location {
